# prover

./: Cargo.toml
bonzai/: Cargo.toml  README.md
bonzai/src/: main.rs
host/: Cargo.toml
host/res/: example.json  sepolia_proof.json  sepolia_transaction.json
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs  outputs.rs
utils/src/transactions/: mod.rs  transactions.rs
utils/src/trie/: mod.rs
