[package]
name = "bonzai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
bonsai-sdk = "0.5.1"
risc0-zkvm = { version = "0.19.1" }
methods = { path = "../methods" }
hex = "0.4.3"
